# optimisation

./: .gitignore  README.md
theory/: OptimisationMethods_Overview.ipynb  Overview.md  README.md
tools_examples/OpEn/: README.md
tools_examples/OpEn/examples_python/: OpEn_Python_Panelty.ipynb  README.md  codegen.py  solver_call.py
tools_examples/OpEn/examples_python/example_02/: call_solver.py  codegen_solver.py
tools_examples/OpEn/examples_python/example_rosenbrock/: call_solver.py  codegen_solver.py
tools_examples/OpEn/examples_rust/: How_to_use_rust.md  OpEn_Rust_example.ipynb  OpEn_Rust_example_01_02.ipynb  OpEn_Rust_example_03_ALMPM.ipynb  OpEn_Rust_example_04.ipynb  OpEn_Rust_example_05.ipynb  OpEn_Rust_example_06.ipynb  OpEn_Rust_examples_general_diff.ipynb  OpEn_Rust_examples_multiple_obstacles.ipynb  OpEn_Rust_examples_nonlinear_obstacles.ipynb  OpEn_Rust_examples_nonlinear_obstacles_02.ipynb  OpEn_Rust_examples_obs_avoidance_plotcheck.ipynb  OpEn_Rust_examples_obs_avoidance_simplified.ipynb  OpEn_Rust_examples_path_planner.ipynb  README.md
tools_examples/OpEn/examples_rust/example_02/: Cargo.toml
tools_examples/OpEn/examples_rust/example_02/src/: main.rs
tools_examples/OpEn/examples_rust/example_03_almpm/src/: main.rs
tools_examples/OpEn/examples_rust/example_06_obstacle/: Cargo.toml
tools_examples/OpEn/examples_rust/example_09_multple_obstacles/: Cargo.toml
tools_examples/OpEn/examples_rust/example_09_multple_obstacles/src/: main.rs
tools_examples/OpEn/examples_rust/example_rosenbrock/: Cargo.toml
(+5 files in other folders)
