[package]
name = "example_08_pathplanning"
version = "0.1.0"
authors = ["Inmo Jang <inmo.jang@manchester.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optimization_engine = "0.6.2"
nalgebra = "0.20"
plotlib = "0.5.1"